--- a/src/components/layout/Footer/Footer.module.css
+++ b/src/components/layout/Footer/Footer.module.css
@@ -18,6 +18,7 @@
 }
 
 .navLinks li a {
+    font-family: "Helvetica medium", sans-serif;
     font-size: var(--font-size-medium);
     letter-spacing: var(--letter-spacing);
 
@@ -35,7 +36,6 @@
 
 .footerInfo {
     font-size: var(--font-size-small);
-    color: var(--grey-color);
     display: flex;
     justify-self: flex-end;
 }
